--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: M4metalearning
+Package: fforma
 Title: Metalearning Tools For Time Series Forecasting
 Version: 0.0.0.9000
 Authors@R: c(
@@ -15,7 +15,7 @@ Imports: forecast,
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.0.1.9000
+RoxygenNote: 7.0.0
 Suggests: knitr,
     rmarkdown
 VignetteBuilder: knitr
