--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,17 @@ export(opt_msis)
 export(predict_interval)
 export(predict_selection_ensemble)
 export(prepare_radius_info)
+export(rolling_auto_arima)
+export(rolling_ets)
+export(rolling_fc_methods)
+export(rolling_forecast)
+export(rolling_naive)
+export(rolling_nnetar)
+export(rolling_rw_drift)
+export(rolling_snaive)
+export(rolling_stlm_ar)
+export(rolling_tbats)
+export(rolling_thetaf)
 export(rw_drift_forec)
 export(snaive_forec)
 export(softmax_transform)
